# hyperbolic

./: CMakeLists.txt  README.md
include/: glm_lorentz.h  glm_traits.h  high_precision.h  honeycombs.h  hyperbolic.h  imaginary_extension.h  lorentz_lie_algebra.h  rigid_body.h  spheres.h  vector_types.h
test/: glm_assertions.h  test_glm_lorentz.cpp  test_high_precision.cpp  test_honeycombs.cpp  test_hyperbolic.cpp  test_liealgebra.cpp  test_rigid_body.cpp  test_spheres.cpp
